# firemerge

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
backend/: pyproject.toml
backend/src/firemerge/: api.py  deps.py  firefly_client.py  main.py  merge.py  model.py  statement.py  util.py
backend/src/firemerge/api/: __init__.py  accounts.py  common.py  deps.py  statement.py  transactions.py
backend/src/firemerge/model/: account_settings.py  api.py  common.py  firefly.py
backend/src/firemerge/statement/: config_repo.py  export.py  parser.py  reader.py
backend/src/firemerge/statement/configs/: aval_business.yaml  aval_online.yaml  privat24.yaml
backend/tests/: conftest.py  test_export.py  test_statement.py  test_statement_parser.py
firemerge/: api.py  commands.py  deps.py  firefly_client.py  main.py  merge.py  model.py  scrape.py  session.py  session_storage.py  statement.py  web.py
frontend/: eslint.config.js  firemerge.html  firemerge.js  index.html  package-lock.json  package.json  prettier.config.js  tsconfig.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AccountInput.tsx  AccountSettings.tsx  Candidates.tsx  CategoryInput.tsx  ColorTheme.tsx  CurrentAccount.tsx  DescriptionInput.tsx  ErrorDisplay.tsx  FileUpload.tsx  GlobalLoader.tsx  Header.tsx  Loader.tsx  Main.tsx  Menu.tsx  RefreshButton.tsx  Statement.tsx  StatementExport.tsx  Transaction.tsx  TransactionCard.tsx  TransactionDialog.tsx  TransactionList.tsx  TransactionTypeInput.tsx  TransactionTypeLabel.tsx  Transactions.tsx
frontend/src/components/AccountSettings/: BlacklistConfig.tsx  ExportConfig.tsx  ExportFieldEditor.tsx  StatementParserConfig.tsx  index.ts
frontend/src/components/AccountSettings/hooks/: useAccountSettingsState.ts  useExportSettings.ts  useParserSettings.ts
frontend/src/components/AccountSettings/types/: settingsTypes.ts
frontend/src/components/AccountSettings/utils/: settingsUtils.ts
frontend/src/hooks/: backend.ts  scrollTrigger.ts  sessionState.ts
frontend/src/services/: backend.ts
frontend/src/types/: backend.ts  errors.ts
