[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
name = "firemerge"
description = "Firefly merge/import GUI"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "selenium ~= 4.25.0",
    "aiohttp ~= 3.10.0",
    "aiohttp-session ~= 2.12.0",
    "python-dotenv ~= 1.0.0",
    "pydantic ~= 2.9.0",
    "tzlocal ~= 5.2",
    "thefuzz ~= 0.22.0",
    "pdfplumber ~= 0.11.6",
    "redis ~= 5.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy==1.11",
    "flake8==7.3.0",
    "flake8-pyproject==1.2.3",
    "black==25.1.0",
    "taskipy==1.14.1",
    "isort==6.0.1",
]

[tool.setuptools]
packages = ["firemerge"]

[project.scripts]
firemerge = "firemerge.main:serve_web"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
lint = "flake8 firemerge"
mypy = "mypy firemerge"
black = "black firemerge"
checks = "task lint && task mypy && task black"