[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
name = "firemerge"
description = "Firefly merge/import GUI"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "aiohttp ~= 3.10.0",
    "aiohttp-session ~= 2.12.0",
    "openpyxl ~= 3.1.5",
    "pydantic ~= 2.9.0",
    "thefuzz ~= 0.22.0",
    "pdfplumber ~= 0.11.6",
    "redis ~= 5.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy==1.16.1",
    "ruff==0.12.4",
    "taskipy==1.14.1",
    "ipython==8.25.0",
]

[tool.setuptools]
packages = ["firemerge"]

[project.scripts]
firemerge = "firemerge.main:serve_web"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = ["thefuzz.*"]
follow_untyped_imports = true

[tool.taskipy.tasks]
mypy = "mypy firemerge"
ruff = "ruff format firemerge"
fe-lint = "cd frontend && npm run lint"
fe-check = "cd frontend && npm run check"
checks = "task ruff && task mypy && task fe-lint && task fe-check"