[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.12,<0.9.0"]

[project]
name = "firemerge"
description = "Firefly merge/import GUI"
version = "0.1.0"
requires-python = "~= 3.13.0"
dependencies = [
    "fastapi >= 0.128.0",
    "httpx ~= 0.27.0",
    "itsdangerous ~= 2.2.0",
    "openpyxl ~= 3.1.5",
    "pydantic ~= 2.9.0",
    "thefuzz ~= 0.22.0",
    "pdfplumber ~= 0.11.9",
    "python-multipart ~= 0.0.20",
    "redis ~= 5.0.0",
    "uvicorn[standard] ~= 0.24.0",
    "pyyaml>=6.0.2",
    "hi-dateinfer>=0.4.6",
]

[dependency-groups]
dev = [
    "ipython>=8.25.0",
    "mypy>=1.16.1",
    "ruff>=0.12.4",
    "types-openpyxl>=3.1.5.20250602",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "types-pyyaml>=6.0.12.20250822",
]

[project.scripts]
firemerge = "firemerge.main:serve_web"

[tool.uv.build-backend]
namespace = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = ["thefuzz.*", "aiocache.*", "hidateinfer.*"]
follow_untyped_imports = true

[tool.taskipy.tasks]
mypy = "mypy firemerge"
ruff = "ruff format firemerge && ruff check firemerge"
fe-lint = "cd frontend && npm run lint"
fe-check = "cd frontend && npm run check"
checks = "task ruff && task mypy && task fe-lint && task fe-check"
